1999-07-24  Marcus G. Daniels  <mgd@pojoaque.santafe.edu>

	* collections.h (_Set): Split out common Set features into
	subprotocol. (Set, OrderedSet): Adopt it. 

1999-07-03  Marcus G. Daniels  <mgd@pojoaque.santafe.edu>

	* collections.h (InputStream): Declare -setLong: and -getLong.

1999-07-02  Marcus G. Daniels  <mgd@pojoaque.santafe.edu>

	* InputStream.m ([InputStream_c -getExpr]): Default to _C_LNG 
	for numbers.
	([ArchiverArray_c -setArray:]): Check for _C_LNG instead of _C_INT.
	([ArchiverValue_c -lispOutDeep:]): Handle _C_LNG.

	* InputStream.[hm] ([ArchiverValue_c -setLong:], [ArchiverValue_c
	-getLong]): New methods.

	* InputStream.h (ArchiverValue_c): Add long type to value union.

	* InputStream.m ([InputStream_c -getExpr]): Remove disabled `nil'
	parsing code.

1999-07-01  Marcus G. Daniels  <mgd@pojoaque.santafe.edu>

	* List_GEN.m ([TARGET -describe:]): Cast getField return to int.

	* InputStream.m ([ArchiverArray_c -lispOutDeep:]): Don't use
	sprintf just to make string from char.

1999-06-30  Marcus G. Daniels  <mgd@pojoaque.santafe.edu>

	* collections.h (OutputStream), OutputStream.[hm]: Add long long
	output methods.

	* collections.h, Map.[hm]: Add -setCompareCStrings,
	-setCompareIntegers, -setCompareUnsignedIntegers, -setCompareIDs.

	* Map.m (COMPAREFUNCEQ): New macro.  Use it throughout
	for any instance of compareFunc == X.

1999-06-29  Alex Lancaster  <alex@santafe.edu>

	* ListShuffler.m ([ListShuffler_c +create:setUniformRandom:]):
	Call createBegin on `self' rather than `ListShuffler_c', since
	this does not exist for a phase-split class.

1999-06-25  Marcus G. Daniels  <mgd@pojoaque.santafe.edu>

	* Set.[hm] ([Set_c -getCount]): New method.

1999-06-22  Marcus G. Daniels  <mgd@pojoaque.santafe.edu>

	* Collection.m (indexAtOffset): Adjust loop logic to avoid
	negative numbers.

	* List_GEN.m ([TINDEX -setOffset:]): Likewise.

	* Permutation.[hm] ([PermutationItem_c -setPosition:],